--- a/ImageSegmentation/PyTorch_ImageSegmentation.ipynb
+++ b/ImageSegmentation/PyTorch_ImageSegmentation.ipynb
@@ -1211,7 +1211,7 @@
       "id": "1b624f25",
       "metadata": {},
       "source": [
-        "Burada ise eğitim kısmına benzer bir kayıp hesabı yapıyoruz fakat buradaki önemli işlerden birisi kaybımızı direkt ele alıyor oluşumuz ve no_grad'ın yokluğudur."
+        "Burada ise eğitim kısmına benzer bir kayıp hesabı yapıyoruz fakat buradaki önemli işlerden birisi kaybımızı direkt ele alıyor oluşumuz ve no_grad'ın izlenmesidir."
       ]
     },
     {
@@ -1776,7 +1776,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.5 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -1790,7 +1790,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "cda057ccb0cb91c9ce59470e73901b3641e671a10f07be5ab4825eb80c5cbae8"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
